syntax = "proto3";

package tinkoff.public.invest.api.contract.v1;

option go_package = "./;investapi";
option java_package = "ru.tinkoff.piapi.contract.v1";
option java_multiple_files = true;
option csharp_namespace = "Tinkoff.InvestApi.V1";
option objc_class_prefix = "TIAPI";
option php_namespace = "Tinkoff\\Invest\\V1";

import "google/protobuf/timestamp.proto";
import "common.proto";

service StopOrdersService {
  rpc PostStopOrder(PostStopOrderRequest) returns (PostStopOrderResponse);
}

enum StopOrderDirection {
  STOP_ORDER_DIRECTION_UNSPECIFIED = 0;
  STOP_ORDER_DIRECTION_BUY = 1;
  STOP_ORDER_DIRECTION_SELL = 2;
}

enum StopOrderExpirationType {
  STOP_ORDER_EXPIRATION_TYPE_UNSPECIFIED = 0;
  STOP_ORDER_EXPIRATION_TYPE_GOOD_TILL_CANCEL = 1;
  STOP_ORDER_EXPIRATION_TYPE_GOOD_TILL_DATE = 2;
}

enum StopOrderType {
  STOP_ORDER_TYPE_UNSPECIFIED = 0;
  STOP_ORDER_TYPE_TAKE_PROFIT = 1;
  STOP_ORDER_TYPE_STOP_LOSS = 2;
  STOP_ORDER_TYPE_STOP_LIMIT = 3;
}

message PostStopOrderRequest {
  string figi = 1 [ deprecated = true ];
  int64 quantity = 2;
  Quotation price = 3;
  Quotation stop_price = 4;
  StopOrderDirection direction = 5;
  string account_id = 6;
  StopOrderExpirationType expiration_type = 7;
  StopOrderType stop_order_type = 8;
  google.protobuf.Timestamp expire_date = 9;
  string instrument_id = 10;
  bool confirm_margin_trade = 11;
}

message PostStopOrderResponse {
  string stop_order_id = 1;
}


